--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mouad.trackapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,13 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackApp">
-        <activity android:name=".LoginActivity"
-            android:parentActivityName=".StartActivity"
-            />
+        <activity android:name=".ResetPasswordActivity"
+            android:parentActivityName=".LoginActivity"
+            ></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:parentActivityName=".StartActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".RegisterActivity"
-                  android:parentActivityName=".StartActivity"
-            />
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".StartActivity" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".StartActivity">
             <intent-filter>
