--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,9 @@
         android:roundIcon="@drawable/chat"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackApp">
-        <activity android:name=".ChangePasswordActivity"></activity>
+        <activity android:name=".TicTacToeActivity"></activity>
+        <activity android:name=".GameMenuActivity" />
+        <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".MessagingActivity" />
         <activity android:name=".LoginTutoActivity" />
         <activity android:name=".RegisterTutoActivity" />
